Add JaCoCo and Spotless for code quality
Add JaCoCo plugin for code coverage reporting (report only, no threshold).
Add Spotless with palantir-java-format for Java code formatting on both
main library and examples subproject.
Add Spotless check step to CI workflow before build.

Run 'spotlessApply' to format existing code - 43 Java files reformatted.
Current JaCoCo coverage: 51% (baseline for future improvements).

Signed-off-by: elfrucool <elfrucool@gmail.com>